# Job-Scheduler

./: .gitignore  README.md
frontend_server/: package-lock.json  package.json
frontend_server/src/app/: page.tsx
frontend_server/src/app/api/groups/: route.ts
frontend_server/src/app/api/groups/[groupId]/jobs/: route.ts
frontend_server/src/components/: CronJobForm.tsx  GroupForm.tsx  GroupList.tsx
frontend_server/styles/: globals.css  group.css
server/: Cargo.toml  docker-compose.yaml  queries.sql
server/src/: main.rs  scheduler.rs
server/src/scheduler/: cron.rs  s3.rs
