[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "tls-native-tls", "chrono"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15"
serde = "1.0.219"
uuid = {version="1.18.0", features = ["serde"] }
serde_json = "1.0.142"
reqwest = "0.12.23"
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
tar = "0.4.44"
shiplift = "0.7.0"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors"] }

